<resources>
    <string name="app_name">Plunner</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dashboard">Dashboard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_compose_schedule">Compose a schedule</string>
    <string name="edit_schedule">Edit schedule</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_company">Company</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="account_type">com.plunner.plunner</string>
    <string name="action_search" />
    <string name="meeting">Meeting</string>
    <string name="lipsum">Secondary line text lorem ipsum dapibus, neque id cursus faucibus</string>
    <string name="meeting_tbp">TO BE PLANNED</string>
    <string name="meeting_p">PLANNED</string>
    <string name="meeting_c">CREATED</string>
    <string name="enabled">ENABLED</string>
    <string name="disabled">DISABLED</string>
    <string name="edit_event">Edit event</string>
    <string name="add_event">Add event</string>
    <string name="delete_event">Delete event</string>
    <string name="meetings_tbp">to be planned</string>
    <string name="meetings_p">planned</string>
    <string name="meeting_mg">managed</string>
    <string name="schedules_composed">Composed </string>
    <string name="schedules_imported">imported </string>
    <string name="menu_refresh">Refresh meetings</string>

    <string name="title_activity_meeting_detail">Meeting detail</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="duration">Duration</string>
    <string name="meeting_title">Meeting title</string>
    <string name="meeting_desc">Meeting description</string>
    <string name="p_timeslots">Possible timeslots</string>
    <string name="group">Group</string>
    <string name="your_settings">Your settings</string>
    <string name="send">Send</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="edit_settings">Edit settings</string>
    <string name="name_error">Please insert a name</string>
    <string name="pwd_error">Please insert a password of at least 6 characters</string>
    <string name="emptyStateTBPMeetings">Sorry, no meetings to be planned for your group at the moment</string>
    <string name="emptyStatePMeetings">Sorry, no meetings planned for your group at the moment</string>
    <string name="emptyStateMMeetings">Sorry, no meetings managed by you at the moment</string>
    <string name="emptyStateSchedules">Sorry, no composed schedules for you at the moment</string>
    <string name="refresh_schedules">Refresh schedules</string>
    <string name="minutes">mins</string>
    <string name="edit_meeting">Edit meeting</string>
    <string name="settings_activity_title">Your settings</string>
    <string name="add_meeting_activity_title">Add meeting</string>
</resources>
