<?xml version="1.0" encoding="utf-8"?>

<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/horizontalScrollView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <Button
            android:id="@+id/button_meeting_tbp"
            style="@style/subCategoryButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:text="@string/meeting_tbp" />

        <Button
            android:id="@+id/button_meeting_p"
            style="@style/subCategoryButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:text="@string/meeting_p" />

        <Button
            android:id="@+id/button_meeting_c"
            style="@style/subCategoryButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/meeting_c" />
    </LinearLayout>
</HorizontalScrollView>