<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/secondary_text" />

    <TextView
        android:id="@+id/activity_user_settings_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primary_text"
        android:layout_marginBottom="20dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/prompt_email"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/secondary_text" />

    <TextView
        android:id="@+id/activity_user_settings_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primary_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/prompt_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/secondary_text" />

    <TextView
        android:id="@+id/activity_user_settings_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primary_text"
        android:inputType="textPassword"
        android:text="@string/prompt_password" />


</LinearLayout>